@@ -1,5 +1,8 @@
 2008-03-19  Donal K. Fellows  <dkf@users.sf.net>
 
+	* generic/tcl.h, generic/tclThreadAlloc.c (Tcl_GetMemoryInfo): Make
+	sure this function is available when direct linking. [Bug 1868171]
+
 	* tests/reg.test (reg-33.14): Marked nonPortable because some
 	environments have small default stack sizes. [Bug 1905562]
 
